intial code and setup

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=erp
+# Temporary H2 in-memory DB (for testing, no setup needed)
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+
+# JPA
+spring.jpa.hibernate.ddl-auto=update
+
+# Disable security for now (we’ll enable when JWT setup comes in)
+spring.security.enabled=false
